--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <link rel="stylesheet" href="lib/animate.css">
     <link rel="stylesheet" href="lib/tailwind.css">
     <link rel="stylesheet" href="lib/animate.css">
-    <link rel="stylesheet" href="scss/var.scss">
-    <link rel="stylesheet" href="scss/main.scss">
-    <link rel="stylesheet" href="scss/import.scss">
-    <link rel="stylesheet" href="scss/components.scss">
+    <link rel="stylesheet" href="scss/var.css">
+    <link rel="stylesheet" href="scss/main.css">
+    <link rel="stylesheet" href="scss/import.css">
+    <link rel="stylesheet" href="scss/components.css">
     <link rel="shortcut icon" href="assets/icons/logo.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
