--- a/card.html
+++ b/card.html
@@ -12,10 +12,10 @@
     <link rel="stylesheet" href="lib/animate.css">
     <link rel="stylesheet" href="lib/tailwind.css">
     <link rel="stylesheet" href="lib/animate.css">
-    <link rel="stylesheet" href="scss/var.scss">
-    <link rel="stylesheet" href="scss/main.scss">
-    <link rel="stylesheet" href="scss/import.scss">
-    <link rel="stylesheet" href="scss/components.scss">
+    <link rel="stylesheet" href="scss/var.css">
+    <link rel="stylesheet" href="scss/main.css">
+    <link rel="stylesheet" href="scss/import.css">
+    <link rel="stylesheet" href="scss/components.css">
     <link rel="shortcut icon" href="assets/icons/logo.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -228,20 +228,6 @@
                     Commander des yescards
                 </a>
             </div>
-        </div>
-    </div>
-
-    <!-- Pay -->
-    <div class="flex flex-wrap align-middle items-center justify-around bg-gray-400 p-8">
-        <div class="flex flex-center justify-center">
-            <h1 class="font-extrabold text-center text-black text-2xl sm:text-3xl">
-                Nos moyens de paiements
-            </h1>
-        </div>
-        <br>
-        <div class="flex flex-wrap justify-center gap-6">
-            <img src="assets/icons/bitcoin.png" height="100" width="100">
-            <img src="assets/icons/card.png" height="100" width="100">
         </div>
     </div>
 
