--- a/bank.html
+++ b/bank.html
@@ -12,9 +12,9 @@
     <link rel="stylesheet" href="lib/animate.css">
     <link rel="stylesheet" href="lib/tailwind.css">
     <link rel="stylesheet" href="lib/animate.css">
-    <link rel="stylesheet" href="scss/var.scss">
-    <link rel="stylesheet" href="scss/main.scss">
-    <link rel="stylesheet" href="scss/import.scss">
+    <link rel="stylesheet" href="scss/var.css">
+    <link rel="stylesheet" href="scss/main.css">
+    <link rel="stylesheet" href="scss/import.css">
     <script src="lib/jquery.js"></script>
     <script>
         $("#menu").click(function () {
@@ -309,20 +309,6 @@
             <video controls autoplay="true" style="border-radius:10px;height:70vh">
                 <source src="assets/video/MONEY.mp4">
             </video>
-        </div>
-    </div>
-
-    <!-- Pay -->
-    <div class="flex flex-wrap align-middle items-center justify-around bg-gray-400 p-8">
-        <div class="flex flex-center justify-center">
-            <h1 class="font-extrabold text-center text-black text-2xl sm:text-3xl">
-                Nos moyens de paiements
-            </h1>
-        </div>
-        <br>
-        <div class="flex flex-wrap justify-center gap-6">
-            <img src="assets/icons/bitcoin.png" height="100" width="100">
-            <img src="assets/assets/img/transcash.png" height="100" width="200">
         </div>
     </div>
 
