--- a/index.html
+++ b/index.html
@@ -160,6 +160,10 @@
         </div>
     </section>
 
+    <div class="bg-black flex flex-wrap justify-around gap-2 p-10" id="logo">
+        <img src="bg.jpg" alt="" height="100" width="100">
+    </div>
+    
     <!-- Logo company -->
     <div class="bg-black flex flex-wrap justify-around gap-2 p-10" id="logo">
         <img src="assets/assets/img/google_pay.png" alt="" height="30" width="100">
