--- a/card.html
+++ b/card.html
@@ -234,6 +234,16 @@
         </div>
     </div>
 
+    <p class="text-1xl text-black text-center">
+        As-tu déjà entendu parlé des cartes Yes? Sais-tu ce que c'est ?
+
+enfaite c'est comme des cartes bancaires sauf qu'elles sont clonées et du genre on insère une somme à l'intérieur que tu peux retirer dans n'importe quel distributeur automatique du coup c'est comme une multiplication d'argent, si tu commande une carte de 500€ par exemple à l'intérieur de cette carte on insère 12000€ et chaque jour tu peux effectuer un retrait de 1000 par carte jusqu'à atteindre la somme contenue dans la carte.
+
+Question: pourquoi est-ce que vous n'allez pas au guichet pour procéder vous même aux différents retraits ?
+
+Réponse: tout simplement parce que nous avons des centaines de cartes clonées et faire autant de retraits pour une seule personne est très risqué. Donc nous faisons le moins de retraits possible et nous vendons plus de cartes possible car ça permet de faire un maximum de bénéfices tout en prenant le maximum de risque possible.
+    </p>
+
     <!-- Footer -->
     <footer class="bg-black pt-20" style="border-top: 0.7px solid #ddd;">
         <div class="mx-auto w-full max-w-screen-xl">
