--- a/bank.html
+++ b/bank.html
@@ -120,6 +120,9 @@
                     <a href="https://api.whatsapp.com/send?phone=+33751172676" class="text-black hover:text-green-500">
                         <img src="assets/icons/whatsapp.png" height="30" width="30">
                     </a>
+                                        <a href="mailto:cardskimming284@gmail.com" class="text-black hover:text-green-500">
+                        <img src="assets/icons/gmail.png" height="30" width="30">
+                    </a>
                 </button>
             </div>
             <div class="items-center justify-between hidden w-full md:flex md:w-auto md:order-1" id="menu_list">
