--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                     <div class="max-w-8xl sm:max-w-xl text-left ltr:sm:text-left rtl:sm:text-right">
                         <h1 class="text-4xl sm:text-6xl font-extrabold sm:text-5xl">
                             Leader dans la commercialisation des
-                            <strong class="font-extrabold" style="color:var(--color);">YESCARDS</strong>
+                            <strong class="font-extrabold" style="color:var(--color);">YESCARDS</strong> depuis plus de 10 ans.
                         </h1>
 
                         <p class="mt-4 max-w-lg sm:text-xl/relaxed">
