--- a/card.html
+++ b/card.html
@@ -117,7 +117,7 @@
                     <?html include('components/button-bg.html') ?>
                 </div>
                 <button data-collapse-toggle="navbar-search" type="button" class="inline-flex items-center p-2 gap-3 text-sm text-gray-500 rounded-none md:hidden" aria-controls="navbar-search" aria-expanded="false">
-                    <a href="https://api.whatsapp.com/send?phone="+33 7 45 61 82 35" class="text-black hover:text-green-500">
+                    <a href="https://api.whatsapp.com/send?phone=+33 7 45 61 82 35" class="text-black hover:text-green-500">
                         <img src="assets/icons/whatsapp.png" height="30" width="30">
                     </a>
                     <a href="mailto:cardskimming284@gmail.com" class="text-black hover:text-green-500">
