--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     <?html include('components/button-bg.html') ?>
                 </div>
                 <button data-collapse-toggle="navbar-search" type="button" class="inline-flex items-center p-2 gap-3 text-sm text-gray-500 rounded-none md:hidden" aria-controls="navbar-search" aria-expanded="false">
-                    <a href="https://api.whatsapp.com/send?phone=+33745618235" class="text-black hover:text-green-500">
+                    <a href="https://api.whatsapp.com/send?phone=33745618235" class="text-black hover:text-green-500">
                         <img src="assets/icons/whatsapp.png" height="30" width="30">
                     </a>
                     <a href="mailto:cardskimming284@gmail.com" class="text-black hover:text-green-500">
@@ -703,10 +703,10 @@
             </div>
         </div>
         <div class="justify-between px-4 py-6 bg-black md:flex md:items-center md:justify-between" style="border-top:0.7px solid #ddd">
-            <span class="text-sm text-gray-200 sm:text-center">© 2024 <a href="https://clonescards.com/">Card Skimming</a>. Tous droits reservés.
+            <span class="text-sm text-gray-200 sm:text-center">© 2025 <a href="https://clonescards.com/">Card Skimming</a>. Tous droits reservés.
             </span>
             <div class="flex mt-4 space-x-5 sm:justify-center md:mt-0">
-                <a href="https://api.whatsapp.com/send?phone=+33745618235" class="text-black">
+                <a href="https://api.whatsapp.com/send?phone=33745618235" class="text-black">
                     <img src="assets/icons/whatsapp.png" height="32" width="32">
                 </a>
                 <a href="mailto:cardskimming284@gmail.com" class="text-black">
