--- a/bank.html
+++ b/bank.html
@@ -106,7 +106,7 @@
                     <a href="card.html" class="text-black hover:text-green-500">
                         Acquérir des YESCARDS
                     </a>
-                    <a href="https://api.whatsapp.com/send?phone=+33 7 45 61 82 35" class="text-black hover:text-green-500">
+                    <a href="https://api.whatsapp.com/send?phone=33745618235" class="text-black hover:text-green-500">
                         <img src="assets/icons/whatsapp.png" height="30" width="30">
                     </a>
                     <a href="#">
