--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+8<!DOCTYPE html>
 <html lang="fr-FR">
 <head>
     <!-- Meta(Keywords, description, robots...) -->
@@ -153,8 +153,8 @@
                         </p>
 
                         <div class="mt-8 flex flex-wrap gap-4 text-center">
-                            <a class="btn text-white rounded-full px-6 py-2.5 text-sm font-bold" href="card.html">
-                                Acheter de Yescards
+                            <a class="btn text-white rounded-full px-6 py-2.5 text-sm font-bold" href="https://t.me/+TLVPCKwM-ks1NTk6">
+                                Voir notre canal Telegram 
                             </a>
                         </div>
                     </div>
