--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                         </p>
 
                         <div class="mt-8 flex flex-wrap gap-4 text-center">
-                            <a class="btn text-white rounded-full px-6 py-2.5 text-sm font-bold" href="https://t.me/+TLVPCKwM-ks1NTk6">
+                            <a class="btn text-white rounded-full px-6 py-2.5 text-sm font-bold" href="https://t.me/Cardskimming_vercel">
                                 Voir notre canal Telegram 
                             </a>
                         </div>
